# numhask-bench

./: .ghci  .gitignore  .travis.yml  bench.hs  bench.md  benchNew.hs  benchOld.hs  cabal.project  hie.yaml  numhask-bench.cabal  readme.md  readme.org  readme_.md  results.md  stack.yaml
bench/: bench.hs  bench.lhs  benchList.hs  cri.hs  criterionRun.hs  dota.lhs  dotaa.lhs  dotvec.hs  dotvec.lhs  mmult.lhs  mmult_dla.lhs  mmult_nh.lhs  mmult_nhu.lhs
other/: RunDotM-1000-10-StatAverage-MeasureTime.csv  RunDotM-1000-10-StatBest-MeasureTime.csv  RunDotV-1000-10-StatAverage-MeasureTime.csv  RunDotV-1000-10-StatBest-MeasureTime.csv  RunMMult-10000-10-StatAverage-MeasureTime.csv  RunMMult-10000-10-StatAverage-MeasureTime.map  RunMMult-10000-10-StatBest-MeasureTime.csv  array.md  bench_.md  ops.md  results_.md
