name: numhask-bench
version: 0.0.2
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask/numhask-bench#readme
bug-reports:
  https://github.com/tonyday567/numhask/numhask-bench/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  2.0
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask-bench

executable numhask-bench
  main-is:
    bench.hs
  hs-source-dirs:
    ./
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , adjunctions
    , mwc-random
    , numhask >= 0.6 && < 0.7
    , numhask-array >= 0.7 && < 0.8
    , optparse-generic
    , pandoc-types >= 1.21
    , perf >=0.7 && < 0.8
    , text
    , vector
    , readme-lhs
  default-language: Haskell2010
