name: numhask-bench
version: 0.0.2
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask/numhask-bench#readme
bug-reports:
  https://github.com/tonyday567/numhask/numhask-bench/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  2.0
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask-bench

executable numhask-bench
  main-is:
    bench.hs
  hs-source-dirs:
    ./
  default-extensions:
  ghc-options:
    -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , adjunctions
    , formatn ^>= 0.1
    , numhask ^>= 0.8.1
    , numhask-array ^>= 0.9
    , numhask-hmatrix
    , numhask-space ^>= 0.8.1
    , perf ^>=0.8
    , text
    , vector
  default-language: Haskell2010
