name: numhask-bench
version: 0.0.2
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask/numhask-bench#readme
bug-reports:
  https://github.com/tonyday567/numhask/numhask-bench/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  2.0
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask-bench

executable numhask-bench
  main-is:
    bench.hs
  hs-source-dirs:
    ./
  default-extensions:
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -- -threaded
    -rtsopts
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
    -- -fllvm
    -- -O2

    -- -nonmoving-gc -A128m -N2 -qn2 -Fd4
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , adjunctions
    , containers
    , formatn ^>= 0.2
    , numhask ^>= 0.10
    , numhask-array ^>= 0.10
    , numhask-hmatrix
    , numhask-space ^>= 0.10
    , perf ^>=0.10
    , text
    , vector
    , optparse-applicative
  default-language: Haskell2010

executable numhask-bench-old
  main-is:
    benchOld.hs
  hs-source-dirs:
    ./
  default-extensions:
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -- -threaded
    -rtsopts
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
    -- -fllvm
    -- -O2

    -- -nonmoving-gc -A128m -N2 -qn2 -Fd4
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , adjunctions
    , containers
    , formatn ^>= 0.2
    , numhask ^>= 0.10
    , numhask-array ^>= 0.10
    , numhask-hmatrix
    , numhask-space ^>= 0.10
    , perf ^>=0.10
    , text
    , vector
    , optparse-applicative
  default-language: Haskell2010

executable numhask-bench-new
  main-is:
    benchNew.hs
  hs-source-dirs:
    ./
  default-extensions:
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -- -threaded
    -rtsopts
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
    -- -fllvm
    -- -O2

    -- -nonmoving-gc -A128m -N2 -qn2 -Fd4
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , adjunctions
    , containers
    , formatn ^>= 0.2
    , numhask ^>= 0.10
    , numhask-array ^>= 0.10
    , numhask-hmatrix
    , numhask-space ^>= 0.10
    , perf ^>=0.10
    , text
    , vector
    , optparse-applicative
  default-language: Haskell2010
